# viewer

./: AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  test_data.csv
.claude/: settings.local.json
.omc/state/: hud-state.json  hud-stdin-cache.json
.sisyphus/plans/: config-refactor.md  curve-config-internal.md  curve-config-save-load.md
src/: CanvasTabWidget.cpp  CanvasTabWidget.h  ChartWidget.cpp  ChartWidget.h  DataModel.cpp  DataModel.h  DataParser.cpp  DataParser.h  FavorPanel.cpp  FavorPanel.h  LeftPane.cpp  LeftPane.h  MainWindow.cpp  MainWindow.h  main.cpp
src/models/: CategoryItem.h  ConfigManager.cpp  ConfigManager.h  CurveConfig.h  SeriesData.h
